--- a/GymLogger/appsettings.json
+++ b/GymLogger/appsettings.json
@@ -1,13 +1,16 @@
 {
   "Logging": {
-      "LogLevel": {
+    "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-      }
-    },
+    }
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Default": "Data Source=../GymLoggerDB/GymLogger.db"
+  },
+  "AppSettings": {
+    "Token": "NZJgHzLz81ELP8306OxpLx6h0d1GCNVr"
   }
 }
