--- a/ExerciseTracker/ExerciseTracker.csproj
+++ b/ExerciseTracker/ExerciseTracker.csproj
@@ -36,6 +36,10 @@
     <ProjectReference Include="..\ExerciseTracker.DataAccess\ExerciseTracker.DataAccess.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ClientApp\" />
+  </ItemGroup>
+
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
